--- a/JavaScript/30-Dars/index.html
+++ b/JavaScript/30-Dars/index.html
@@ -7,6 +7,35 @@
 </head>
 <body style="background-color: black;">
     
+
+    <div class="container">
+        <button id="colorBtn">Tugma rangni ozgartrsh</button>
+    </div>
+    <br>
+
+    <div class="container">
+        <button id="dateBtn">5 kundan keyingi sana chiqarish</button>
+        <p id="dateResult"></p>
+    </div>
+    <br>
+
+    <div class="container">
+        <button id="textBtn">Eski matn</button>
+    </div>
+    <br>
+
+    <div class="container">
+        <button id="removeBtn">Meni ochirib</button>
+    </div>
+    <br>
+
+    <div class="container">
+        <input type="text" id="userInput">
+        <button id="checkBtn">submit</button>
+    </div>
+
+    <script src="app.js"></script>
+
     <script src="app.js"></script>
 </body>
 </html>
