--- a/JavaScript/30-Dars/index.html
+++ b/JavaScript/30-Dars/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body style="background-color: black;">
+<body style="background-color:grey;">
     
 
     <div class="container">
@@ -25,7 +25,7 @@
     <br>
 
     <div class="container">
-        <button id="removeBtn">Meni ochirib</button>
+        <button id="removeBtn">Mani ochirb tasha</button>
     </div>
     <br>
 
@@ -33,8 +33,6 @@
         <input type="text" id="userInput">
         <button id="checkBtn">submit</button>
     </div>
-
-    <script src="app.js"></script>
 
     <script src="app.js"></script>
 </body>
